# HikMeaDis

./: CMakeLists.txt  README.md  README.md~
src/: CapPicture.cpp~  HikMeaDis.cpp~  consoleMain.cpp~
